feat: big improvements and tests
- cover codebase with unit tests;
- fix opacity effect on the app mount;
- new settings icon;
- restyle settings dialog;
- remove stylelint;
- many code style changes;
- preload font and use font blocker strategy to reduce app loading time and avoid of content blink.

--- a/src/components/Fonts/components/Digital7Mono/index.css
+++ b/src/components/Fonts/components/Digital7Mono/index.css
@@ -3,5 +3,5 @@
   src: url('./digital-7mono.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
-  font-display: auto;
+  font-display: block;
 }
